Initial gradle build
Closes #1

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,18 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Gradle directories/files
+build
+.gradle
+
+# IntelliJ IDEA directories/files
+.idea
+*.iml
+out
+
+# gradle-wrapper jar should be included
+!/gradle/wrapper/gradle-wrapper.jar
+
+# jEnv
+.java-version
